UI fixes and more tests. Added a mobile test.
